# stfs-tool

./: .gitignore  README.md  pyproject.toml
src/stfs/: binary.py  cli.py  constants.py  exceptions.py  header.py  package.py
src/stfs/commands/: info.py
