[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "stfs-tool"
version = "0.1.0"
description = "Xbox 360 STFS container toolkit"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "typer>=0.16",
    "rich>=14.0",
]

[project.scripts]
stfs = "stfs.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
